[tool.poetry]
name = "retry"
version = "0.0.1"
description = "Retro Game Engine for Python"
authors = ["eggveloper"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
pyglet = "1.5.21"
pyopengl = "3.1.5"
numpy = "1.21.4"

[tool.poetry.dev-dependencies]
pyglet = "1.5.21"
pyopengl = "3.1.5"
numpy = "1.21.4"
black = "21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
